<resources>
    <string name="app_name">Rose-Hulman Maps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Firstname Lastname</string>
    <string name="nav_header_subtitle">user_email@rose-hulman.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search">Search…</string>
    <string name="sign_out">Sign Out</string>
    <string name="action_location_sharing">Location Sharing</string>
    <string name="action_groups">Groups</string>
    <string name="action_events">Events</string>
    <string name="action_map">Map</string>
    <string name="qshareloc">Share Location?</string>
    <string name="locpeople">People who can view your location (if shared):</string>
    <string name="locshareexp">Sharing your location allows the users you select below to see your location on their map
        while you have this app open.
    </string>
    <string name="locaddperson">Add Someone</string>
    <string name="locclearpeople">Remove Everyone</string>
    <string name="groupexp">Groups provide an easy way to invite multiple people to events. Group organizers can create
        and edit group events and add or remove people from the group.
    </string>
    <string name="groupheader">Groups you are part of</string>
    <string name="eventheader">Upcoming Events</string>
    <string name="searchhint">Search here</string>
    <string name="members">Members</string>
    <string name="leavegroup">Leave Group</string>
    <string name="addmember">Add Member</string>
    <string name="addevent">Add Event</string>
    <string name="taptorename">(tap to rename)</string>
    <string name="mapheading">Map:</string>
    <string name="deleteevent">Delete Event</string>
    <string name="date_seperator">%1$s until %2$s</string>
    <string name="owner">Owner</string>
    <string name="loginText">Currently logged in as %1$s</string>
    <string name="saveevent">Save Event</string>
    <string name="add_person">Add Person</string>
    <string name="accountLoading">Loading account data...</string>
    <string name="edit_eventname">Edit event name</string>
    <string name="addgroups">Add groups</string>
    <string name="edit_groupname">Edit group name</string>
    <string name="delete_group">Delete Group</string>
    <string name="save_group">Save Group</string>
    <string name="groupname_prompt">Enter a group name...</string>
    <string name="person_prompt">Add User</string>
    <string name="create_event">Create Event</string>
    <string name="cancel">Cancel</string>
    <string-array name="month_abbrev">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="membertypes">
        <item>Owner</item>
        <item>Member</item>
    </string-array>
    <string-array name="editview">
        <item>Edit</item>
        <item>View</item>
    </string-array>

</resources>
