<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/action_map"/>
        <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_event"
                android:title="@string/action_events"/>
        <item
                android:id="@+id/nav_groups"
                android:icon="@drawable/ic_group"
                android:title="@string/action_groups"/>
        <item
                android:id="@+id/nav_locshare"
                android:icon="@drawable/ic_my_location"
                android:title="@string/action_location_sharing"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings"/>
    </group>

</menu>
