<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/rootlayout"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="@+id/rootlayout"
            android:id="@+id/titleview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorpagetitle"
            android:paddingBottom="4dp">
        <TextView
                android:text="$groupname"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/group_title"/>
        <TextView
                android:text="@string/taptorename"
                app:layout_constraintTop_toBottomOf="@id/group_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="12dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/settings_subtitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/titleview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/eventheader"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/listheader"/>

    <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/listheader"
            app:layout_constraintBottom_toBottomOf="@id/event_member_split"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/event_recycler_view" tools:layout_editor_absoluteX="16dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".3"
            android:id="@+id/event_member_split"/>
    <TextView
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/members"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/memberheader"/>

    <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/addmemberbutton"
            app:layout_constraintBottom_toTopOf="@id/savebutton"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/member_recycler_view"/>
    <Button
            android:text="@string/addmember"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/memberheader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addmemberbutton"/>

    <View
            android:id="@+id/divider"
            app:layout_constraintTop_toTopOf="@id/event_member_split"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>
    <Button
            android:layout_margin="8dp"
            android:text="@string/delete_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/delbutton"/>

    <Button
            android:layout_margin="8dp"
            android:text="@string/save_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/savebutton"/>

</androidx.constraintlayout.widget.ConstraintLayout>