<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/rootlayout"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            app:layout_constraintTop_toTopOf="@+id/rootlayout"
            android:id="@+id/titleview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorpagetitle"
            android:paddingBottom="4dp">
        <TextView
                android:text="@string/action_groups"
                android:layout_centerHorizontal="true"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/settings_title"/>
    </RelativeLayout>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/explainText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/groupheader"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:id="@+id/listheader"/>
    <TextView
            app:layout_constraintTop_toBottomOf="@id/titleview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/groupexp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/explainText"/>
    <android.support.v7.widget.RecyclerView
            app:layout_constraintTop_toBottomOf="@id/listheader"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:layout_margin="16dp" />

</android.support.constraint.ConstraintLayout>